# bento-ya

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  E2E_REPORT.md  PRODUCT.md  README.md  REFACTOR-PLAN.md  SESSION.md  index.html  lint-staged.config.js  model-comparison-view-in-settings.task.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  wdio.conf.mjs  wdio.conf.ts
.claude/plans/: chat-ux-improvements.md
.github/workflows/: ci.yml  deploy-site.yml  post-merge-ci.yml  release.yml
.overnight-audit/: last-run.state
.tickets/: ARCHITECTURE.md  CHAT-REFACTOR-PLAN.md  OVERNIGHT-PLAN.md  OVERNIGHT-V1-SPRINT.md  POLISH-BACKLOG.md  ROADMAP-V1.md  STATUS.md  dynamic-model-discovery.md  roadmap.md  task-card-enhancements.md
.tickets/_archive/: CHAT-ARCHITECTURE.md
.tickets/_docs/: ARCHITECTURE.md  DAG_DEPENDENCIES.md  HANDOFF_2026-04-06.md  HANDOFF_2026-04-07.md  HANDOFF_2026-04-09.md  HANDOFF_2026-04-10.md  HANDOFF_TERMINAL_REWRITE.md  INTERACTIVE_AGENT_TERMINAL.md  MCP_SERVER.md  (+8 more)
docs/: PIPELINE-ROADMAP.md  ROADMAP.md  dynamic-model-discovery-plan.md  macos-bundle.md  pipeline-v2-guide.md  pipeline-v2-spec.md
e2e/: agent-panel-streaming.spec.ts  agent-panel.spec.ts  app.spec.ts
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts/: rebase-pr.sh  sync-updater-endpoint.js
site/: index.html  main.js  robots.txt  styles.css
src/: app.test.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/sidecars/discord-bot/: package-lock.json  package.json
src-tauri/sidecars/discord-bot/src/: bridge.ts  client.ts  index.ts  message-splitter.ts  output-buffer.ts  persistent-queue.ts  rate-limiter.ts  types.ts
src-tauri/sidecars/discord-bot/src/handlers/: chef.ts  index.ts  reply.ts
src-tauri/src/: api.rs  error.rs  events.rs  github_sync.rs  lib.rs  main.rs  mcp_supervisor.rs
src-tauri/src/chat/: bridge.rs  chef.rs  events.rs  gc.rs  log_retention.rs  mod.rs  pipe_transport.rs  pty_transport.rs  registry.rs  session.rs  tmux_transport.rs  transport.rs
src-tauri/src/checklist/: mod.rs
src-tauri/src/commands/: agent.rs  app_update.rs  checklist.rs  cli_detect.rs  column.rs  discord.rs  files.rs  git.rs  github.rs  history.rs  label.rs  mod.rs  orchestrator.rs  pipeline.rs  script.rs  siege.rs  task.rs  task_template.rs  terminal.rs  updater.rs  usage.rs  voice.rs  voice_stubs.rs  window_state.rs  workspace.rs
src-tauri/src/commands/orchestrator/: actions.rs  mod.rs  sessions.rs  stream.rs  stream_api.rs  stream_cli.rs  types.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: agent_message.rs  agent_session.rs  chat_message.rs  chat_session.rs  checklist.rs  column.rs  github_sync.rs  history.rs  label.rs  mod.rs  models.rs  orchestrator_session.rs  pipeline_timing.rs  schema.rs  script.rs  task.rs  task_template.rs  usage.rs  workspace.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_column_config.sql  003_pipeline_state.sql  004_chat_messages.sql  005_checklists.sql  006_session_resume.sql  007_cost_tracking.sql  008_session_history.sql  009_chat_sessions.sql  010_cli_sessions.sql  011_workspace_config.sql  012_task_agent_session.sql  013_task_script_exit_code.sql  014_review_status.sql  015_pr_fields.sql  016_siege_fields.sql  017_pr_status_fields.sql  018_discord_integration.sql  018_notify_fields.sql  019_checklist_autodetect.sql  019_discord_agent_routes.sql  020_agent_cli_sessions.sql  020_notify_fields.sql  021_agent_messages.sql  022_agent_queue.sql  023_column_triggers.sql  024_drop_legacy_trigger_columns.sql  025_task_retry_count.sql  026_remove_discord.sql  028_scripts.sql  029_task_worktree.sql  030_pipeline_timing.sql  030_usage_column_duration.sql  031_task_batch_id.sql  032_github_sync.sql  032_labels.sql  032_task_archived_at.sql  032_task_templates.sql  032_task_time_tracking.sql  033_github_issue_unique.sql  (+3 more)
src-tauri/src/discord/: bridge.rs  handlers.rs  mod.rs
src-tauri/src/git/: branch_manager.rs  change_tracker.rs  conflict_detector.rs  mod.rs
src-tauri/src/llm/: anthropic.rs  context.rs  executor.rs  mod.rs  tools.rs  types.rs
src-tauri/src/models/: cache.rs  cli_scan.rs  fetcher.rs  metadata.rs  mod.rs  types.rs
src-tauri/src/pipeline/: completion.rs  dependencies.rs  engine.rs  events.rs  exit.rs  hygiene.rs  mod.rs  state.rs  template.rs  test_utils.rs  triggers.rs
src-tauri/src/process/: agent_cli_session.rs  agent_runner.rs  agent_session.rs  cli_session.rs  cli_shared.rs  mod.rs  pty_manager.rs
src-tauri/src/whisper/: manager.rs  mod.rs  recorder.rs  transcriber.rs
(+441 files in other folders)
