[package]
name = "bento-ya"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "bento_ya_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
portable-pty = "0.8"
futures = "0.3"
async-stream = "0.3"
git2 = "0.19"
log = "0.4"

# Local whisper transcription
whisper-rs = "0.15"
hound = "3.5"  # WAV file handling
symphonia = { version = "0.5", features = ["all"] }  # Audio decoding
cpal = "0.15"  # Native audio recording (bypasses webview limitations)

[features]
custom-protocol = ["tauri/custom-protocol"]
