[package]
name = "bento-ya"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "bento_ya_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures = "0.3"
async-stream = "0.3"
git2 = "0.19"
log = "0.4"

# Local whisper transcription (optional - requires macOS 10.15+)
whisper-rs = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
cpal = { version = "0.15", optional = true }
glob = "0.3.3"
tauri-plugin-webdriver-automation = { version = "0.1.3", optional = true }
pty-process = { version = "0.5.3", features = ["async", "tokio"] }
libc = "0.2.184"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
voice = ["whisper-rs", "hound", "symphonia", "cpal"]
webdriver = ["dep:tauri-plugin-webdriver-automation"]
